--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DB_NAME=tender_project
-DB_USER=postgres
-DB_PASSWORD=masterclass
-DB_HOST=localhost
-DB_PORT=5432
-OPENAI_API_KEY=sk-your-actual-openai-api-key-here
+DB_NAME= your database name 
+DB_USER= your user
+DB_PASSWORD= your password
+DB_HOST=your host
+DB_PORT=your port 
