--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 annotated-types==0.7.0
 anyio==4.10.0
 asgiref==3.9.1
+Authlib==1.6.3
 certifi==2025.8.3
+cffi==1.17.1
 charset-normalizer==3.4.3
 crispy-bootstrap5==2025.6
+cryptography==45.0.7
+deprecation==2.1.0
 distro==1.9.0
 Django==5.2.5
 django-crispy-forms==2.4
 greenlet==3.2.4
+grpcio==1.74.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -25,7 +30,9 @@ orjson==3.11.3
 packaging==25.0
 pdf2image==1.17.0
 pillow==11.3.0
+protobuf==6.32.0
 psycopg2-binary==2.9.10
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyPDF2==3.0.1
@@ -44,4 +51,6 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+validators==0.35.0
+weaviate-client==4.16.9
 zstandard==0.24.0
