--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,5 @@
----
+version: '3.4'
 services:
-  db:
-    image: postgres
-    restart: always
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_PASSWORD: password
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data 
   weaviate:
     command:
     - --host
@@ -17,23 +8,14 @@ services:
     - '8080'
     - --scheme
     - http
-    image: cr.weaviate.io/semitechnologies/weaviate:1.30.0
+    image: semitechnologies/weaviate:1.21.8
     ports:
-    - 8080:8080
-    - 50051:50051
-    volumes:
-    - ./weaviate_data:/var/lib/weaviate
+    - "8080:8080"
     restart: on-failure:0
     environment:
-      TRANSFORMERS_INFERENCE_API: 'http://t2v-transformers:8080'
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
-      DEFAULT_VECTORIZER_MODULE: 'text2vec-transformers'
-      ENABLE_MODULES: 'text2vec-transformers'
+      DEFAULT_VECTORIZER_MODULE: 'none'
+      ENABLE_MODULES: ''
       CLUSTER_HOSTNAME: 'node1'
-  t2v-transformers:
-    image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
-    environment:
-      ENABLE_CUDA: '0'  
-...
