--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ greenlet==3.2.4
 grpcio==1.74.0
 h11==0.16.0
 httpcore==1.0.9
-httpx==0.28.1
+httpx==0.27.0
 idna==3.10
 jiter==0.10.0
 jsonpatch==1.33
@@ -51,6 +51,10 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
-validators==0.35.0
-weaviate-client==4.16.9
+validators==0.28.1
+weaviate-client==4.6.3
 zstandard==0.24.0
+sentence-transformers==3.0.1
+scikit-learn
+langchain-community==0.3.27
+ollama
