--- a/db-docker-compose.yml
+++ b/db-docker-compose.yml
@@ -1,5 +1,14 @@
-version: '3.4'
+---
 services:
+  db:
+    image: postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_PASSWORD: password
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data 
   weaviate:
     command:
     - --host
@@ -8,14 +17,23 @@ services:
     - '8080'
     - --scheme
     - http
-    image: semitechnologies/weaviate:1.21.8
+    image: cr.weaviate.io/semitechnologies/weaviate:1.30.0
     ports:
-    - "8080:8080"
+    - 8080:8080
+    - 50051:50051
+    volumes:
+    - ./weaviate_data:/var/lib/weaviate
     restart: on-failure:0
     environment:
+      TRANSFORMERS_INFERENCE_API: 'http://t2v-transformers:8080'
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
       DEFAULT_VECTORIZER_MODULE: 'text2vec-transformers'
       ENABLE_MODULES: 'text2vec-transformers,generative-openai,generative-cohere,generative-palm,generative-aws,generative-mistral,generative-octoai,generative-anthropic,generative-databricks,generative-friendliai,generative-ollama,generative-anyscale'
       CLUSTER_HOSTNAME: 'node1'
+  t2v-transformers:
+    image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
+    environment:
+      ENABLE_CUDA: '0'
+...
